feat(backend): add jobFollowUpReminderDays to User entity